--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -22,7 +22,7 @@
     "_episodes_ (int): Number of episodes in experiment\n",
     "_seed_ (int): Seed for random generation\n",
     "\n",
-    "Result: An arry with length (_episodes_) filled with either _payoff_low_/_payoff_high_\n",
+    "Result: An array with length (_episodes_) filled with either _payoff_low_/_payoff_high_\n",
     "\"\"\"\n",
     "\n",
     "def generate_asset_payoff(_prob_low_, _prob_high_, _payoff_low_, _payoff_high_, _episodes_, _seed_):\n",
