--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,9 @@
     "\"\"\"\n",
     "\n",
     "def generate_asset_payoff(_prob_low_, _prob_high_, _payoff_low_, _payoff_high_, _episodes_, _seed_):\n",
-    "    random.seed(_seed_)\n",
     "\n",
     "    # Generate an array of random asset payoff\n",
+    "    random.seed(_seed_)\n",
     "    asset_payoff = random.uniform(0,1,_episodes_)\n",
     "    asset_payoff[asset_payoff < _prob_low_] = _payoff_low_\n",
     "    asset_payoff[asset_payoff >= _prob_high_] = _payoff_high_\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,9 +64,9 @@
     "\"\"\"\n",
     "\n",
     "def generate_trader_valuation(_asset_payoff_, _private_valuation_mean_, _private_valuation_sd_, _seed_):\n",
-    "    random.seed(_seed_)\n",
     "\n",
     "    # Generate an array for the valuation of the asset of continuous trader\n",
+    "    random.seed(_seed_)\n",
     "    trader_valuation = _asset_payoff_ + random.normal(_private_valuation_mean_, _private_valuation_sd_, len(_asset_payoff_))\n",
     "\n",
     "    return(trader_valuation)"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +87,12 @@
     "\"\"\"\n",
     "\n",
     "def generate_dealer_action(_beta_, _episodes_, _seed_):\n",
-    "    random.seed(_seed_)\n",
     "\n",
     "    # Generate a series of dealer action with probability of \"explore\" decreasing with the function exp(-beta*t)\n",
     "    func = np.vectorize(lambda t: np.exp(-_beta_*t))\n",
     "    dealer_action_prob = func(np.arange(0,_episodes_,1))\n",
     "\n",
+    "    random.seed(_seed_)\n",
     "    dealer_action = random.uniform(0, 1, _episodes_)\n",
     "    dealer_action = (dealer_action_prob >= dealer_action).astype(int).astype(str)\n",
     "    dealer_action[dealer_action == '1'] = \"explore\"\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +119,10 @@
     "\"\"\"\n",
     "\n",
     "def generate_q_matrix(_lower_q_, _upper_q_, _no_possible_prices_, _no_dealers_, _seed_):\n",
-    "    random.seed(_seed_)\n",
     "\n",
     "    # Generate Q_matrix that indicates the expected payoff of the dealer asking each price\n",
-    "\n",
+    "    random.seed(_seed_)\n",
     "    Q_matrix = pd.DataFrame(np.random.uniform(_lower_q_, _upper_q_, size = (_no_possible_prices_,_no_dealers_)), columns = [\"dealer_\" + x for x in list(map(str, np.arange(_no_dealers_)+1))])\n",
-    "    #= random.uniform(_lower_q_, _upper_q_, _no_possible_prices_)\n",
     "    \n",
     "    return(Q_matrix)"
    ]
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +188,7 @@
        "array([0., 4., 0., ..., 0., 4., 4.])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +217,7 @@
        "        4.00186687,  4.38609922])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -247,13 +245,12 @@
        "(array(['exploit', 'explore'], dtype='<U21'), array([198777,   1223]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate_dealer_action(beta,T,1)\n",
     "np.unique(generate_dealer_action(beta,T,1), return_counts = True)"
    ]
   },
@@ -267,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +375,7 @@
        "14  3.082163"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,12 +508,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Make sure to have all variables predefined before running the \"monopoly_experiment\" function\n",
+    "Make sure to have all variables predefined before running the \"duopoly_experiment\" function\n",
     "\n",
     "Parameter:\n",
     "payoff_high (int): Value of asset when payoff is high\n",
@@ -662,6 +659,141 @@
     "\n",
     "    # Return historical_greedy_price and comparative statistics\n",
     "    return dealer_1_historical_greedy_price, dealer_2_historical_greedy_price, np.mean(historical_trading_volume), np.mean(historical_quoted_spread), np.mean(historical_realized_spread)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we will write the functions for a multi-agent experiment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Make sure to have all variables predefined before running the \"multiagent_experiment\" function\n",
+    "\n",
+    "Parameter:\n",
+    "payoff_high (int): Value of asset when payoff is high\n",
+    "prob_high (float): Probability the value of asset is high\n",
+    "payoff_low (int): Value of asset when payoff is low\n",
+    "prob_low (float): Probability the value of asset is low\n",
+    "no_dealers (int): Number of dealer in the experiment\n",
+    "lowest_ask_price (int): Lowest ask price dealer can offer\n",
+    "highest_ask_price (int): Highest ask price dealer can offer\n",
+    "private_valuation_mean (float): Mean of private valuation of traders\n",
+    "private_valuation_sd (float): Standard deviation of private valuation of traders\n",
+    "alpha (float): Parameter determines how fast dealer learns from recent trades (higher means learn faster)\n",
+    "beta (float): Parameter determines how often dealer chooses \"explore\" action (higher means less often)\n",
+    "lower_q (int): Lower bound of initial Q_matrix\n",
+    "upper_q (int): Upper bound of initial Q_matrix\n",
+    "T (int): Maximum number of episode in each experiment\n",
+    "k (int): Random seed for the experiment\n",
+    "\n",
+    "Results:\n",
+    "1) An array of historical dealer price\n",
+    "2) Summary of comparative statistics (trading volume, quoted spread, realized spread)\n",
+    "\"\"\"\n",
+    "\n",
+    "def multiagent_experiment(payoff_high, prob_high, payoff_low, prob_low, # Asset parameters\n",
+    "                          no_dealers, lowest_ask_price, highest_ask_price, # Dealer parameter\n",
+    "                          private_valuation_mean, private_valuation_sd, # Trader parameters\n",
+    "                          alpha, beta, lower_q, upper_q, T, # Learning parameters\n",
+    "                          k # Random seed for experiment\n",
+    "                          ):\n",
+    "    \n",
+    "    # Calculate initial information\n",
+    "    possible_ask_price = np.arange(lowest_ask_price, highest_ask_price+1, 1)\n",
+    "    \n",
+    "    # This list saves the historical greedy prices in arrays for each experiment\n",
+    "    historical_greedy_price = [np.array([]) for _ in np.arange(no_dealers)]\n",
+    "    # This array saves the historical trading volume for each experiment\n",
+    "    historical_trading_volume = np.array([])\n",
+    "    # This array saves the historical quoted spread for each experiment\n",
+    "    historical_quoted_spread = np.array([])\n",
+    "    # This array saves the historical realized spread for each experiment\n",
+    "    historical_realized_spread = np.array([])\n",
+    "\n",
+    "    # Initate experiment with initial variables (Asset Payoff, Trader Valuation, Dealer Action, Q-Matrix)\n",
+    "    asset_payoff = generate_asset_payoff(prob_low, prob_high, payoff_low, payoff_high,T,k)\n",
+    "    trader_valuation = generate_trader_valuation(generate_asset_payoff(prob_low, prob_high, payoff_low, payoff_high,T,k), private_valuation_mean,private_valuation_sd,k)\n",
+    "    dealer_action = [generate_dealer_action(beta,T,1+n*K) for n in np.arange(1,no_dealers+1,1)]\n",
+    "    Q_matrix = generate_q_matrix(lower_q, upper_q, len(possible_ask_price), no_dealers,k)\n",
+    "\n",
+    "    # Set random seed for ask_price randomisation during \"explore\", we iterate this over every experiment to make sure different experiments are selecting different \"explore\" ask prices\n",
+    "    random.seed(k)\n",
+    "\n",
+    "    # Loop over each episode\n",
+    "    for t in np.arange(0,T,1):\n",
+    "\n",
+    "        \"\"\"\n",
+    "        Getting Ask Prices\n",
+    "        \"\"\"\n",
+    "        # We use an array to store ask prices of dealers\n",
+    "        dealer_ask_prices_array = np.array([])\n",
+    "\n",
+    "        # Loop over all dealers and get ask price for each of them\n",
+    "        for n in np.arange(no_dealers):\n",
+    "\n",
+    "            # Dealer n choose to explore or exploit\n",
+    "            if dealer_action[n][t] == \"explore\":\n",
+    "                # If explore, ask_price is random integer from 1 to 15, since we have set seed=k above, this makes sure that ask_prices are taken at random differently in each experiment\n",
+    "                dealer_ask_prices_array = np.append(dealer_ask_prices_array, random.choice(possible_ask_price))\n",
+    "\n",
+    "            if dealer_action[n][t] == \"exploit\":\n",
+    "                # If exploit, ask_price is the action with the highest expected payoff from the dealer's Q_matrix\n",
+    "                dealer_ask_price = np.argmax(Q_matrix.iloc[:,n])+1\n",
+    "                dealer_ask_prices_array = np.append(dealer_ask_prices_array, dealer_ask_price)\n",
+    "\n",
+    "                # Save historical greedy price for dealer n into the corresponding list\n",
+    "                historical_greedy_price[n] = np.append(historical_greedy_price[n], dealer_ask_price)\n",
+    "\n",
+    "        # Stop if greedy price for all dealers didn't change for 10000 episodes\n",
+    "        if min([len(array) for array in historical_greedy_price]) > 10000 and max([np.std(array[-10000:]) for array in historical_greedy_price]) == 0:\n",
+    "            break\n",
+    "\n",
+    "        \"\"\"\n",
+    "        Saving Comparative Stats\n",
+    "        \"\"\"\n",
+    "        # Minimum dealer price for this episode\n",
+    "        lower_ask_price = min(dealer_ask_prices_array)\n",
+    "\n",
+    "        # Save the historical quoted spread\n",
+    "        if t >= 1: historical_quoted_spread = np.append(historical_quoted_spread, lower_ask_price-np.mean(asset_payoff[0:t]))\n",
+    "        # Save the historical trading volume and historical realized spread\n",
+    "        if trader_valuation[t] >= lower_ask_price: \n",
+    "            historical_trading_volume = np.append(historical_trading_volume,1)\n",
+    "            historical_realized_spread = np.append(historical_realized_spread, lower_ask_price-asset_payoff[t])\n",
+    "        else:\n",
+    "            historical_trading_volume = np.append(historical_trading_volume,0)\n",
+    "\n",
+    "        \"\"\"\n",
+    "        Updating Q-Matrix\n",
+    "        \"\"\"\n",
+    "        # Informed trader now chooses whether to trade in this episode according to the lowest_ask_price and how many dealer to trade with\n",
+    "        num_of_dealer_to_trade = list(dealer_ask_prices_array).count(lower_ask_price)\n",
+    "        # Again, we loop over the dealers to determine whether they gets the trade and how their Q-matrix is updated\n",
+    "        for n in np.arange(no_dealers):\n",
+    "\n",
+    "            # Case 1) Trader n gets the trade\n",
+    "            if trader_valuation[t] >= lower_ask_price and dealer_ask_prices_array[n] == lower_ask_price:\n",
+    "                Q_matrix.iloc[int(lower_ask_price-1),n] = alpha*(lower_ask_price-asset_payoff[t])/num_of_dealer_to_trade + (1-alpha)*Q_matrix.iloc[int(lower_ask_price-1),n]\n",
+    "\n",
+    "            # Case 2) Trader n does not get the trade\n",
+    "            else:\n",
+    "                Q_matrix.iloc[int(dealer_ask_prices_array[n]-1),n] = (1-alpha)*Q_matrix.iloc[int(dealer_ask_prices_array[n]-1),n]\n",
+    "    \n",
+    "    # For tracking of progress, prints every 100 iteration of the experiment\n",
+    "    if k%10 == 0: print(f\" Processor{current_process().name} is processing k={k}\")\n",
+    "\n",
+    "    # Return historical_greedy_price and comparative statistics\n",
+    "    return historical_greedy_price, np.mean(historical_trading_volume), np.mean(historical_quoted_spread), np.mean(historical_realized_spread)\n",
+    "\n"
    ]
   }
  ],
