--- a/Monopoly Case.ipynb
+++ b/Monopoly Case.ipynb
@@ -15,7 +15,7 @@
     "import multiprocessing\n",
     "from functools import partial\n",
     "\n",
-    "from ipynb.fs.full.Functions import generate_asset_payoff, generate_trader_valuation, generate_dealer_action, generate_q_matrix, monopoly_experiment"
+    "from ipynb.fs.full.Functions import monopoly_experiment"
    ]
   },
   {
