market maker fix

--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -765,30 +765,42 @@
     "\n",
     "        # Save the historical quoted spread\n",
     "        if t >= 1: historical_quoted_spread = np.append(historical_quoted_spread, lower_ask_price-np.mean(asset_payoff[0:t]))\n",
-    "        # Save the historical trading volume and historical realized spread\n",
-    "        if trader_valuation[t] >= lower_ask_price: \n",
-    "            historical_trading_volume = np.append(historical_trading_volume,1)\n",
-    "            historical_realized_spread = np.append(historical_realized_spread, lower_ask_price-asset_payoff[t])\n",
-    "        else:\n",
-    "            historical_trading_volume = np.append(historical_trading_volume,0)\n",
     "\n",
     "        \"\"\"\n",
     "        Updating Q-Matrix\n",
     "        \"\"\"\n",
-    "        # Informed trader now chooses whether to trade in this episode according to the lowest_ask_price and how many dealer to trade with\n",
-    "        num_of_dealer_to_trade = list(dealer_ask_prices_array).count(lower_ask_price)\n",
-    "        # Again, we loop over the dealers to determine whether they gets the trade and how their Q-matrix is updated\n",
-    "        for n in np.arange(no_dealers):\n",
+    "        # Informed trader now chooses whether to trade in this episode according to the lowest_ask_price\n",
+    "        if trader_valuation[t] >= lower_ask_price: \n",
     "\n",
-    "            # Case 1) Trader n gets the trade\n",
-    "            if trader_valuation[t] >= lower_ask_price and dealer_ask_prices_array[n] == lower_ask_price:\n",
-    "                Q_matrix.iloc[int(lower_ask_price-1),n] = alpha*(lower_ask_price-asset_payoff[t])/num_of_dealer_to_trade + (1-alpha)*Q_matrix.iloc[int(lower_ask_price-1),n]\n",
+    "            # Save the historical trading volume and historical realized spread\n",
+    "            historical_trading_volume = np.append(historical_trading_volume,1)\n",
+    "            historical_realized_spread = np.append(historical_realized_spread, lower_ask_price-asset_payoff[t])\n",
     "\n",
-    "            # Case 2) Trader n does not get the trade\n",
-    "            else:\n",
+    "            # Get the number of dealers to trade with\n",
+    "            num_of_dealer_to_trade = list(dealer_ask_prices_array).count(lower_ask_price)\n",
+    "\n",
+    "            # Now, we loop over the dealers to determine whether they gets the trade and how their Q-matrix is updated\n",
+    "            for n in np.arange(no_dealers):\n",
+    "\n",
+    "                # Case 1) Trader n gets the trade\n",
+    "                if dealer_ask_prices_array[n] == lower_ask_price:\n",
+    "                    Q_matrix.iloc[int(lower_ask_price-1),n] = alpha*(lower_ask_price-asset_payoff[t])/num_of_dealer_to_trade + (1-alpha)*Q_matrix.iloc[int(lower_ask_price-1),n]\n",
+    "\n",
+    "                # Case 2) Trader n does not get the trade\n",
+    "                else:\n",
+    "                    Q_matrix.iloc[int(dealer_ask_prices_array[n]-1),n] = (1-alpha)*Q_matrix.iloc[int(dealer_ask_prices_array[n]-1),n]\n",
+    "            \n",
+    "        # If no trade occurs in this episode\n",
+    "        else:\n",
+    "            # Save historical trading volume\n",
+    "            historical_trading_volume = np.append(historical_trading_volume,0)\n",
+    "\n",
+    "            # We update all of the dealers Q-matrix\n",
+    "            for n in np.arange(no_dealers):\n",
     "                Q_matrix.iloc[int(dealer_ask_prices_array[n]-1),n] = (1-alpha)*Q_matrix.iloc[int(dealer_ask_prices_array[n]-1),n]\n",
+    "\n",
     "    \n",
-    "    # For tracking of progress, prints every 100 iteration of the experiment\n",
+    "    # For tracking of progress, prints every 10 iteration of the experiment\n",
     "    if k%10 == 0: print(f\" Processor{current_process().name} is processing k={k}\")\n",
     "\n",
     "    # Return historical_greedy_price and comparative statistics\n",
