--- a/Duopoly Case.ipynb
+++ b/Duopoly Case.ipynb
@@ -90,7 +90,7 @@
     "if __name__ == '__main__':\n",
     "    pool = multiprocessing.Pool(processes = 10)\n",
     "\n",
-    "    # Set all other parameters other than k (random_seed) for the function \"monopoly_experiment\"\n",
+    "    # Set all other parameters other than k (random_seed) for the function \"duopoly_experiment\"\n",
     "    func = partial(duopoly_experiment, \n",
     "                   payoff_high, prob_high, payoff_low, prob_low, lowest_ask_price, highest_ask_price, private_valuation_mean, private_valuation_sd, \n",
     "                   alpha, beta, lower_q, upper_q, T)\n",
