--- a/Price-Discovery Case.ipynb
+++ b/Price-Discovery Case.ipynb
@@ -15,7 +15,7 @@
     "import multiprocessing\n",
     "from functools import partial\n",
     "\n",
-    "from ipynb.fs.full.Functions import multiagent_experiment"
+    "from ipynb.fs.full.Functions import pricediscovery_experiment"
    ]
   },
   {
@@ -42,7 +42,7 @@
     "expected_payoff = payoff_high*prob_high + payoff_low*prob_low\n",
     "\n",
     "# Dealer parameter\n",
-    "no_dealers = 8\n",
+    "no_dealers = 2\n",
     "lowest_ask_price = 1\n",
     "highest_ask_price = 15\n",
     "possible_ask_price = np.arange(lowest_ask_price, highest_ask_price+1, 1)\n",
@@ -67,41 +67,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multi-Agent Situation\n",
+    "# Price Discovery\n",
     "\n",
-    "Here, we run the simulation in the multi-agent market maker situation, where there are many dealer in the market.\n",
+    "Here, we run the simulation in the price discovery market maker situation, where there are two trading periods in each episode (asset payoff is fixed within an episode and is known by the informed trader).\n",
     "\n",
     "The function that sets up the whole environment are in \"Functions.ipnyb\". We need to put it in a seperate file for it to run on multiple threads. However, it is important to note that we need to have all variables of our experiment defined locally for the function to used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " ProcessorSpawnPoolWorker-4 is processing k=10\n",
-      " ProcessorSpawnPoolWorker-7 is processing k=20\n",
-      " ProcessorSpawnPoolWorker-10 is processing k=30\n",
-      " ProcessorSpawnPoolWorker-8 is processing k=40\n",
-      " ProcessorSpawnPoolWorker-3 is processing k=50\n",
-      " ProcessorSpawnPoolWorker-10 is processing k=70\n",
-      " ProcessorSpawnPoolWorker-5 is processing k=60\n",
-      " ProcessorSpawnPoolWorker-4 is processing k=80\n",
-      " ProcessorSpawnPoolWorker-9 is processing k=100\n",
-      " ProcessorSpawnPoolWorker-10 is processing k=90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    pool = multiprocessing.Pool(processes = 10)\n",
     "\n",
-    "    # Set all other parameters other than k (random_seed) for the function \"multiagent_experiment\"\n",
-    "    func = partial(multiagent_experiment, \n",
+    "    # Set all other parameters other than k (random_seed) for the function \"pricediscovery_experiment\"\n",
+    "    func = partial(pricediscovery_experiment, \n",
     "                   payoff_high, prob_high, payoff_low, prob_low, no_dealers, lowest_ask_price, highest_ask_price, private_valuation_mean, private_valuation_sd, \n",
     "                   alpha, beta, lower_q, upper_q, T)\n",
     "    \n",
@@ -116,21 +99,23 @@
    "source": [
     "# Results\n",
     "\n",
-    "For multi-agent experiments, we are only interested in the comparative statistics."
+    "For price discovery experiments, we are only interested in the discovery variable and the differences in best ask price."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comparative_stats = pd.DataFrame({\"trading_volume\":[item[1] for item in results],\n",
-    "                                  \"quoted_spread\":[item[2] for item in results],\n",
-    "                                  \"realized_spread\":[item[3] for item in results]})\n",
+    "price_discovery_stats = pd.DataFrame({\"price_discovery\":[item[0] for item in results],\n",
+    "                                      \"best_ask_price_difference\":[item[1] for item in results]})\n",
+    "\n",
+    "print(\"Price discovery:\", round(price_discovery_stats['price_discovery'].mean(),3))\n",
+    "print(\"Ask price difference:\", round(price_discovery_stats['best_ask_price_difference'].mean(),3))\n",
     "\n",
     "# We save the data locally\n",
-    "comparative_stats.to_csv(\"./MultiAgent_Simulation/stats_agent8.csv\", index=False)"
+    "#price_discovery_stats.to_csv(\"./PriceDiscovery_Simulation/stats_sigma5.csv\", index=False)"
    ]
   }
  ],
