--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "\n",
     "# Library for multi-threading\n",
-    "from multiprocessing import Process, current_process"
+    "from multiprocessing import current_process, pool"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
     "\n",
     "# Trader parameters\n",
     "private_valuation_mean = 0\n",
-    "private_valuation_sd = 0.5\n",
+    "private_valuation_sd = 5\n",
     "\n",
     "# Learning parameters\n",
     "alpha = 0.01\n",
@@ -179,20 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 4., 0., ..., 0., 4., 4.])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generate_asset_payoff(prob_low, prob_high, payoff_low, payoff_high,T,1)"
    ]
@@ -207,21 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.81217268,  3.69412179, -0.26408588, ...,  0.41681861,\n",
-       "        4.00186687,  4.38609922])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generate_trader_valuation(generate_asset_payoff(prob_low, prob_high, payoff_low, payoff_high,T,1), private_valuation_mean,private_valuation_sd,1)"
    ]
@@ -236,20 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array(['exploit', 'explore'], dtype='<U21'), array([198777,   1223]))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.unique(generate_dealer_action(beta,T,1), return_counts = True)"
    ]
@@ -264,138 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dealer_1</th>\n",
-       "      <th>dealer_2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.251066</td>\n",
-       "      <td>5.160973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.000343</td>\n",
-       "      <td>3.906998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.440268</td>\n",
-       "      <td>3.277016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.558781</td>\n",
-       "      <td>4.036682</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.190302</td>\n",
-       "      <td>4.616450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>4.257584</td>\n",
-       "      <td>5.055659</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3.613357</td>\n",
-       "      <td>5.634352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>3.082163</td>\n",
-       "      <td>5.011403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>4.251914</td>\n",
-       "      <td>4.676069</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>3.421161</td>\n",
-       "      <td>3.594304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>5.402234</td>\n",
-       "      <td>5.904785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>3.940273</td>\n",
-       "      <td>5.076968</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>5.629167</td>\n",
-       "      <td>5.683820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>3.255133</td>\n",
-       "      <td>3.117164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>3.509491</td>\n",
-       "      <td>5.634428</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    dealer_1  dealer_2\n",
-       "0   4.251066  5.160973\n",
-       "1   3.000343  3.906998\n",
-       "2   3.440268  3.277016\n",
-       "3   3.558781  4.036682\n",
-       "4   4.190302  4.616450\n",
-       "5   4.257584  5.055659\n",
-       "6   3.613357  5.634352\n",
-       "7   3.082163  5.011403\n",
-       "8   4.251914  4.676069\n",
-       "9   3.421161  3.594304\n",
-       "10  5.402234  5.904785\n",
-       "11  3.940273  5.076968\n",
-       "12  5.629167  5.683820\n",
-       "13  3.255133  3.117164\n",
-       "14  3.509491  5.634428"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generate_q_matrix(lower_q, upper_q, len(possible_ask_price), no_dealers,1)"
    ]
@@ -412,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +654,7 @@
     "\n",
     "    \n",
     "    # For tracking of progress, prints every 10 iteration of the experiment\n",
-    "    if k%10 == 0: print(f\" Processor{current_process().name} is processing k={k}\")\n",
+    "    if k%100 == 0: print(f\" Processor{current_process().name} is processing k={k}\")\n",
     "\n",
     "    # Return historical_greedy_price and comparative statistics\n",
     "    return historical_greedy_price, np.mean(historical_trading_volume), np.mean(historical_quoted_spread), np.mean(historical_realized_spread)\n",
@@ -838,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +696,7 @@
     "For Example, list[1][0][12] is the expected payoff of dealer 2 in state NT offering the ask price of 13.\n",
     "\"\"\"\n",
     "\n",
-    "def generate_q_matrix(_lower_q_, _upper_q_, _no_possible_prices_, _no_dealers_, _seed_):\n",
+    "def generate_discovery_q_matrix(_lower_q_, _upper_q_, _no_possible_prices_, _no_dealers_, _seed_):\n",
     "\n",
     "    # Generate Q_matrix that indicates the expected payoff of the dealer asking each price\n",
     "    random.seed(_seed_)\n",
@@ -878,51 +715,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[4.25106601, 5.16097348, 3.00034312, 3.90699772, 3.44026767,\n",
-       "         3.27701578, 3.55878063, 4.03668218, 4.19030242, 4.6164502 ,\n",
-       "         4.25758354, 5.0556585 , 3.61335675, 5.63435231, 3.08216278],\n",
-       "        [5.01140253, 4.25191441, 4.67606949, 3.42116082, 3.59430447,\n",
-       "         5.40223371, 5.90478473, 3.94027253, 5.07696785, 5.62916746,\n",
-       "         5.68381999, 3.25513263, 3.11716435, 3.50949126, 5.63442751],\n",
-       "        [3.2950405 , 4.26332288, 5.87366859, 4.59949585, 5.07563134,\n",
-       "         3.94654689, 5.05950278, 5.50387702, 3.05486483, 5.25043294,\n",
-       "         5.96658327, 5.24449696, 3.84133198, 5.36783799, 3.30967802],\n",
-       "        [4.34368058, 5.72578651, 3.88084245, 3.86332602, 3.39008572,\n",
-       "         3.05810087, 5.0365066 , 3.63488435, 3.79663998, 4.47471948,\n",
-       "         3.16008764, 4.72235282, 3.44018572, 4.76791661, 5.09927508],\n",
-       "        [3.30700329, 4.24216796, 5.08320047, 4.24253781, 3.14986038,\n",
-       "         4.60768922, 4.99138394, 4.54466734, 5.83378427, 4.75966512,\n",
-       "         5.71020575, 3.41242411, 3.41782904, 5.42217387, 4.19303051]]),\n",
-       " array([[3.49606259, 5.78252574, 4.04329758, 5.25243631, 5.17799396,\n",
-       "         5.64991827, 4.87101662, 5.2528273 , 4.04669503, 3.80978368,\n",
-       "         5.68765865, 4.28427357, 5.89452014, 4.99032449, 4.86508716],\n",
-       "        [3.34423792, 5.84846778, 4.3497364 , 4.73516884, 4.22441041,\n",
-       "         3.71108094, 5.71013856, 4.72103846, 3.00861098, 4.85143474,\n",
-       "         3.97993471, 4.58117431, 5.6578263 , 4.07180928, 5.72560545],\n",
-       "        [4.87008035, 3.04746373, 5.7883117 , 5.07269075, 5.99196855,\n",
-       "         3.51702153, 3.41140725, 5.79778639, 5.09045448, 3.19800052,\n",
-       "         5.26638916, 5.26162857, 5.76907361, 5.13457428, 3.37281289],\n",
-       "        [3.0596404 , 3.07863296, 3.08491946, 3.7386332 , 5.58008385,\n",
-       "         4.61649319, 4.65846594, 5.52609268, 3.37251995, 3.83755104,\n",
-       "         4.75727781, 5.90878724, 4.68309066, 3.05594187, 5.40189802],\n",
-       "        [3.69892282, 5.42131559, 4.16358193, 5.59062556, 5.24136493,\n",
-       "         4.6687207 , 3.40936568, 3.17975307, 3.36403037, 3.13365564,\n",
-       "         3.32248239, 3.67712802, 5.13896694, 4.67915095, 3.03766794]])]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "generate_q_matrix(lower_q,upper_q,len(possible_ask_price),2,1)"
+    "generate_discovery_q_matrix(lower_q,upper_q,len(possible_ask_price),2,1)"
    ]
   },
   {
@@ -939,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +785,7 @@
     "    trader_valuation_period2 = generate_trader_valuation(asset_payoff, private_valuation_mean,private_valuation_sd,k+K)\n",
     "    dealer_action_period1 = [generate_dealer_action(beta,T,k+n*K) for n in np.arange(1,no_dealers+1,1)]\n",
     "    dealer_action_period2 = [generate_dealer_action(beta,T,k+2*n*K) for n in np.arange(1,no_dealers+1,1)]\n",
-    "    Q_matrix = generate_q_matrix(lower_q,upper_q,len(possible_ask_price),no_dealers,k)\n",
+    "    Q_matrix = generate_discovery_q_matrix(lower_q,upper_q,len(possible_ask_price),no_dealers,k)\n",
     "\n",
     "    # Set random seed for ask_price randomisation during \"explore\", we iterate this over every experiment to make sure different experiments are selecting different \"explore\" ask prices\n",
     "    random.seed(k)\n",
