--- a/Multi-Agent Case.ipynb
+++ b/Multi-Agent Case.ipynb
@@ -42,7 +42,7 @@
     "expected_payoff = payoff_high*prob_high + payoff_low*prob_low\n",
     "\n",
     "# Dealer parameter\n",
-    "no_dealers = 8\n",
+    "no_dealers = 2\n",
     "lowest_ask_price = 1\n",
     "highest_ask_price = 15\n",
     "possible_ask_price = np.arange(lowest_ask_price, highest_ask_price+1, 1)\n",
@@ -76,26 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " ProcessorSpawnPoolWorker-4 is processing k=10\n",
-      " ProcessorSpawnPoolWorker-7 is processing k=20\n",
-      " ProcessorSpawnPoolWorker-10 is processing k=30\n",
-      " ProcessorSpawnPoolWorker-8 is processing k=40\n",
-      " ProcessorSpawnPoolWorker-3 is processing k=50\n",
-      " ProcessorSpawnPoolWorker-10 is processing k=70\n",
-      " ProcessorSpawnPoolWorker-5 is processing k=60\n",
-      " ProcessorSpawnPoolWorker-4 is processing k=80\n",
-      " ProcessorSpawnPoolWorker-9 is processing k=100\n",
-      " ProcessorSpawnPoolWorker-10 is processing k=90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    pool = multiprocessing.Pool(processes = 10)\n",
@@ -121,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +113,7 @@
     "                                  \"realized_spread\":[item[3] for item in results]})\n",
     "\n",
     "# We save the data locally\n",
-    "comparative_stats.to_csv(\"./MultiAgent_Simulation/stats_agent8.csv\", index=False)"
+    "#comparative_stats.to_csv(\"./MultiAgent_Simulation/stats_agent2.csv\", index=False)"
    ]
   }
  ],
